--- a/app/src/main/res/layout/user_adapter_layout.xml
+++ b/app/src/main/res/layout/user_adapter_layout.xml
@@ -14,7 +14,7 @@
         android:orientation="horizontal">
 
         <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/imageView"
+            android:id="@+id/userImage"
             android:layout_width="120dp"
             android:layout_height="match_parent"
             android:cropToPadding="true"
